--- a/public/themes/admin_simpleboot3/portal/admin_article/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_article/add.html
@@ -54,6 +54,13 @@
                         </td>
                     </tr>
                     <tr>
+                        <th>跳转链接</th>
+                        <td>
+                            <textarea class="form-control" name="post[url]" style="height: 50px;"
+                                      placeholder="请填写跳转链接"></textarea>
+                        </td>
+                    </tr>
+                    <tr>
                         <th>关键词</th>
                         <td>
                             <input class="form-control" type="text" name="post[post_keywords]" id="keywords" value=""
