--- a/public/themes/default/portal/carbontrace.html
+++ b/public/themes/default/portal/carbontrace.html
@@ -33,7 +33,7 @@
   <div class="white" id="carbontraceModel1">
 
     <div class="main-center main-title">
-      <div class="big-title">Carbon Tracking Journey</div>
+      <div class="big-title">碳足迹</div>
       <div class="small-title"></div>
     </div>
 
@@ -147,7 +147,8 @@
     </div>
 
   </div>
-
+  <!-- 入驻流程 -->
+  <include file="public@entertheplatform1/entertheplatform1" />
   <!-- footer -->
   <include file="public@footer/footer" />
 </body>
