--- a/public/themes/default_en-us/portal/carbontrace.html
+++ b/public/themes/default_en-us/portal/carbontrace.html
@@ -148,7 +148,26 @@
 
 </div>
 <!-- 入驻流程 -->
-<include file="public@entertheplatform1/entertheplatform1" />
+<css file="__TMPL__/static/css/enterThePlatform.css" />
+
+<div class="white">
+  <div class="main-center enter">
+    <widget name="link">
+      <div class="enter_box">
+        <portal:articles item="vo" limit="6" order="post.published_time DESC" categoryIds="96">
+          <div class="enter_box_desc">{$vo.post_title}</div>
+
+          <div class="enter_box_btn">
+            <a href="http://{$vo.url}" target="_blank">
+              <img src="__STATIC__/images/intelnet.png" alt="">
+              {$vo.url}
+            </a>
+          </div>
+        </portal:articles>
+      </div>
+    </widget>
+  </div>
+</div>
 <!-- footer -->
 <include file="public@footer/footer" />
 </body>
