--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -1,7 +1,11 @@
 <header class="header">
   <div class="header_box main-center">
     <div class="header_box_logo">
-      <img src="__TMPL__/static/img/logo.jpg" alt="">
+      <img src="__STATIC__/images/logo_new.png" alt="">
+      <div class="header_title">
+        <div class="header_title_big">Celtic international Limited</div>
+        <div class="header_title_small">海南凯尔特</div>
+      </div>
     </div>
 
     <!-- pc端显示 -->
