--- a/public/themes/default_en-us/public/socialize/socialize.html
+++ b/public/themes/default_en-us/public/socialize/socialize.html
@@ -1,10 +1,17 @@
 <widget name="setApp">
-  <volist name="$widget.vars.varName1" id="vo1" length="4">
-    <div class="item">
-      <a href="{$vo1.link}" target="_blank"><img src="__ROOT__/upload/{$vo1.icon}" alt=""></a>
-      <img class="qrCode" src="__ROOT__/upload/{$vo1.qrCode}" alt="">
-    </div>
-  </volist>
+
+  <div className="item">
+    <a href="" target="_blank"><img src="__STATIC__/images/fb.png" alt=""></a>
+    <img className="qrCode" src="__STATIC__/images/qs.png" alt="">
+  </div>
+  <div className="item">
+    <a href="" target="_blank"><img src="__STATIC__/images/sa.png" alt=""></a>
+    <img className="qrCode" src="__STATIC__/images/qs.png" alt="">
+  </div>
+  <div className="item">
+    <a href="" target="_blank"><img src="__STATIC__/images/bd.png" alt=""></a>
+    <img className="qrCode" src="__STATIC__/images/qs.png" alt="">
+  </div>
 </widget>
 
 <script>
