--- a/public/themes/default_en-us/public/socialize/socialize.html
+++ b/public/themes/default_en-us/public/socialize/socialize.html
@@ -1,16 +1,16 @@
 <widget name="setApp">
 
-  <div className="item">
+  <div class="item">
     <a href="" target="_blank"><img src="__STATIC__/images/fb.png" alt=""></a>
-    <img className="qrCode" src="__STATIC__/images/qs.png" alt="">
+    <img class="qrCode" src="__STATIC__/images/qs.png" alt="">
   </div>
-  <div className="item">
+  <div class="item">
     <a href="" target="_blank"><img src="__STATIC__/images/sa.png" alt=""></a>
-    <img className="qrCode" src="__STATIC__/images/qs.png" alt="">
+    <img class="qrCode" src="__STATIC__/images/qs.png" alt="">
   </div>
-  <div className="item">
+  <div class="item">
     <a href="" target="_blank"><img src="__STATIC__/images/bd.png" alt=""></a>
-    <img className="qrCode" src="__STATIC__/images/qs.png" alt="">
+    <img class="qrCode" src="__STATIC__/images/qs.png" alt="">
   </div>
 </widget>
 
