--- a/public/themes/default/portal/products.html
+++ b/public/themes/default/portal/products.html
@@ -5,7 +5,11 @@
 <css file="__TMPL__/static/css/products.css" />
 <script type="text/javascript" src="__TMPL__/static/js/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="__TMPL__/static/js/bootstrap.min.js"></script>
-
+<style>
+  .banner_box460{
+    height: 540px;
+  }
+</style>
 <body>
   <!-- header -->
   <include file="public@header/header" />
