--- a/public/themes/default/public/header/header.html
+++ b/public/themes/default/public/header/header.html
@@ -1,11 +1,13 @@
 <header class="header">
   <div class="header_box main-center">
     <div class="header_box_logo">
-      <img src="__STATIC__/images/logo_new.png" alt="">
-      <div class="header_title">
-        <div class="header_title_big">Celtic international Limited</div>
-        <div class="header_title_small">海南凯尔特</div>
-      </div>
+      <a href="{:cmf_url('portal/index/index?_design_theme=default')}">
+        <img src="__STATIC__/images/logo_new.png" alt="" >
+        <div class="header_title">
+          <div class="header_title_big">Celtic international Limited</div>
+          <div class="header_title_small">海南凯尔特</div>
+        </div>
+      </a>
     </div>
     <!-- pc端显示 -->
     <div class="header_box_nav">
