--- a/public/themes/default_en-us/public/head/head.html
+++ b/public/themes/default_en-us/public/head/head.html
@@ -9,7 +9,7 @@
   <meta name="screen-orientation" content="portrait">
   <meta name="x5-orientation" content="portrait">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-  <title>CarbonTracking</title>
+  <title>Celtic International</title>
   <link rel="shortcut icon" href="__TMPL__/static/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="__TMPL__/static/css/common.css">
   <link rel="stylesheet" href="__TMPL__/static/css/header.css">
